--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -158,6 +158,10 @@ $tech-jquery: #0769AD;
 $tech-azure: #0089D6;
 $tech-adobe: #FF0000;
 $tech-hotjar: #F04D4E;
+$tech-tailwind: #06B6D4;
+$tech-nextjs: #000000;
+$tech-typescript: #3178C6;
+$tech-xd: #FF61F6;
 
 // ============================================================
 // SHADOW TOKENS
